$Id: CHANGES,v 1.283 2006/03/13 10:33:44 stelian Exp $

Changes between versions 0.4b41 and 0.4b42 (released xxxxxxxxxxxxxxx)
=====================================================================

1.	Fix printout of the 'Connection to' message in dump/restore.
	Thanks to Dale Wiles <dwiles@users.sourceforge.net> for the
	bug report and its fix.

Changes between versions 0.4b40 and 0.4b41 (released January 2, 2006)
=====================================================================

1.	Fix restore of dumped Access Control Lists. The previous
	code for EA works fine, but ACLs needed conversion from the
	ext2/3 disk format to posix_acl format before restoring.

2.	Fix some issues with restoration of EA on big endian
	platforms.

3.	Fix restore when the symtab is over 2GB in size.

4.	Made the directory hash indexing an optional feature,
	accessible by the '-H' option of restore, and disable it
	by default.

5.	Fixed dump to not include extended attributes information
	in the toc (archive) file which confused restore -t.

Changes between versions 0.4b39 and 0.4b40 (released May 2, 2005)
=================================================================

1.	Changed restore to emit warnings (instead of emitting a fatal
	error) if a file (or a directory) is unavailable for a 
	comparision (if the user doesn't have the necessary permissions
	to access it for example). Thanks to Kenneth Porter
	<shiva@sewingwitch.com> for the bug report.

2.	Re-done the 'do not save directory entries to non-dumped inodes
	(excluded from dump)' feature. The previous implementation
	worked well for excluded directories but not for regular files.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

3.	Fixed a bug in dump where the tape size was miscalculated when
	the user used -d/-s to specify the tape characteristics. Thanks
	to Philip Goisman <goisman@physics.arizona.edu> for reporting
	the bug.

4.	Fixed another bug introduced in restore with the hashtree